--- a/BDSMLibrary/Allie_and_Nicole.html
+++ b/BDSMLibrary/Allie_and_Nicole.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Allie and Nicole</title>
+<link rel="icon" type="image/x-icon" href="book.png">
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Open+Sans&display=swap" rel="stylesheet">
 <style>
  :root{
