--- a/From Outside/I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html
+++ b/From Outside/I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Verdant Chapters – Reader View</title>
+  <link rel="icon" type="image/x-icon" href="book.png">
+  <title>I got reincarnated naked and can't find a pair of paints</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     :root {
