--- a/Mailgirl/Mailgirl.html
+++ b/Mailgirl/Mailgirl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8"><title>Casi's Secret</title>
-
+<link rel="icon" type="image/x-icon" href="book.png">
 <meta name="Author" content="NAMB">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="book.png">
