--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     "Rebekah_the_Helper's_Union_Member.html",
     "Naked_and_Unafraid.html",
     "The_Rent.html",
-    "Princess_Sara.html",
     "Saving_a_Relic.html",
     "KAT's_Collection.html",
     "Soccer_Naked.html",
@@ -176,6 +175,10 @@
     "The_Law_of_private_ground.html",
     "Office_Screw_Up.html",
     "Allie_and_Nicole.html"
+  ],
+  "Author_Harry": [
+    "Princess_Sara.html",
+    "Ladies'_Lodge.html",
   ],
   "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
