--- a/From Outside/Legalised_Slavery.html
+++ b/From Outside/Legalised_Slavery.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Story Pulse</title>
+  <title>Legalised Slavery</title>
+  <link rel="icon" type="image/x-icon" href="book.png">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
     :root {
