--- a/Mailgirl/Adventures_of_a_Mailgirl.html
+++ b/Mailgirl/Adventures_of_a_Mailgirl.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Adventures of a Mailgirl</title>
+<link rel="icon" type="image/x-icon" href="book.png">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
   :root{
