--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
     "A_Firebug_Gets_Punished.html",
     "The_ENF_Catcher.html",
     "Legends_Of_The_Fel.html",
+    "Leila's_Humiliation.html",
+    "Caroline's_Inheritance.html",
     "Laundry_Day.html",
     "Natural_Beauty.html",
     "SOMA_Vestiphobia_Attorney.html",
@@ -179,6 +181,8 @@
   "Author_Harry": [
     "Princess_Sara.html",
     "Ladies'_Lodge.html",
+    "Doris,_Friends _and_Pirates.html",
+    "Golden_Guard.html"
   ],
   "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
