--- a/Author_Harry/Ladies'_Lodge.html
+++ b/Author_Harry/Ladies'_Lodge.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Fullscreen Chapters — New Minimal Reader</title>
+<link rel="icon" type="image/x-icon" href="book.png">
+<title>Ladies' Lodge</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
