--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
     "The_ENF_Catcher.html",
     "Legends_Of_The_Fel.html",
     "Leila's_Humiliation.html",
-    "Caroline's_Inheritance.html",
     "Laundry_Day.html",
     "Natural_Beauty.html",
     "SOMA_Vestiphobia_Attorney.html",
@@ -127,7 +126,10 @@
     "The_Goblin_Whisperer_and_her_Ponygirl.html",
     "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html",
     "How_Sarah_Became_a_Nudist.html",
-    "Nude_World_Order.html"
+    "Nude_World_Order.html",
+    "The_Party.html",
+    "Katie,_the_President.html",
+    "New_Rules.html"
   ],
   "Mailgirl": [
     "Mailgirl.html",
@@ -179,6 +181,7 @@
     "Allie_and_Nicole.html"
   ],
   "Author_Harry": [
+    "Caroline's_Inheritance.html",
     "Princess_Sara.html",
     "Ladies'_Lodge.html",
     "Doris,_Friends _and_Pirates.html",
