--- a/Author_Harry/Caroline's_Inheritance.html
+++ b/Author_Harry/Caroline's_Inheritance.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Working Flip-Book Reader</title>
+<link rel="icon" type="image/x-icon" href="book.png">
+<title>Caroline's Inheritance</title>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -230,7 +231,7 @@
 
 <div class="container">
   <div class="header">
-    <h1 class="title">The Little Story Book</h1>
+    <h1 class="title">Caroline's Inheritance</h1>
   </div>
 
   <div class="book-container">
