--- a/From Outside/Katie,_the_President.html
+++ b/From Outside/Katie,_the_President.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Story Title - Multi-Chapter Reader</title>
+    <link rel="icon" type="image/x-icon" href="book.png">
+    <title>Katie - the President</title>
     <style>
         * {
             margin: 0;
@@ -401,8 +402,8 @@
     <header class="header">
         <div class="header-content">
             <div class="story-info">
-                <h1>Your Epic Story Title</h1>
-                <p class="author">by Author Name</p>
+                <h1>Katie the President</h1>
+                <p class="author">by Penance</p>
             </div>
             <nav class="chapter-nav">
                 <a href="#" class="chapter-btn" onclick="showChapter(1)">Ch 1</a>
