--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     "Nude_World_Order.html",
     "The_Party.html",
     "Katie,_the_President.html",
-    "New_Rules.html"
+    "How_Kristen_Spent_Her_Summer_Vacation.html"
   ],
   "Mailgirl": [
     "Mailgirl.html",
