--- a/Author_Harry/Caroline's_Inheritance.html
+++ b/Author_Harry/Caroline's_Inheritance.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/x-icon" href="book.png">
 <title>Caroline's Inheritance</title>
+<link rel="icon" type="image/x-icon" href="book.png">
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
   :root{
