--- a/From Outside/How_Kristen_Spent_Her_Summer_Vacation.html
+++ b/From Outside/How_Kristen_Spent_Her_Summer_Vacation.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story Reader</title>
+<link rel="icon" type="image/x-icon" href="book.png">
+    <title>How Kristen Spent Her Summer Vacation</title>
     <style>
         * {
             margin: 0;
