--- a/From Outside/The_Party.html
+++ b/From Outside/The_Party.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Party</title>
+    <link rel="icon" type="image/x-icon" href="book.png">
     <style>
         * {
             margin: 0;
