--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     "Diane_After_Work_-_RSW.html",
     "Janet_Incentive_Program_-_RSW.html",
     "Holi_Babysitting_Job_-_RSW.html",
+    "Tradition_-_.RSW.html",
     "The_Princess_Errant.html",
     "Red_Fannie_Annie.html",
     "A_Firebug_Gets_Punished.html",
