--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
     "Doris,_Friends _and_Pirates.html",
     "Golden_Guard.html"
   ],
+  "Falcon_&_Seahawk": [
+    "The_Reluctant_Exhibitionist.html",
+    "The_Reluctant_Exhibitionist_Returns.html",
+    "The_Reluctant_Exhibitionist_–_Family_Reunion.html",
+    "Allison’s_Inheritance.html"
+  ],
   "Evacuees_Tale": ["Evacuees_Tale_01.html", "Evacuees_Tale_02.html", "Evacuees_Tale_03.html"],
   "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html", 
     "Family_Tradition_Picture_Day_02gto02j.html",
