--- a/index.html
+++ b/index.html
@@ -116,21 +116,20 @@
     "Chez_Louise.html",
     "Lucina_Masked_Streaker.html",
     "Unintentional.html",
-    "Ponygirl.html",
     "Naturally_Nora.html",
     "Queenfall.html",
     "Adventure_in_the_Willows.html",
-    "A_beginning_of_A_Ponygirl.html",
     "The_Bath_Towel.html",
     "Trisha_the_Terrible.html",
     "Legalised_Slavery.html",
-    "The_Goblin_Whisperer_and_her_Ponygirl.html",
     "I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html",
     "How_Sarah_Became_a_Nudist.html",
     "Nude_World_Order.html",
     "The_Party.html",
     "Katie,_the_President.html",
-    "How_Kristen_Spent_Her_Summer_Vacation.html"
+    "How_Kristen_Spent_Her_Summer_Vacation.html",
+    "Trials_of_Champions.html"
+    "The_Pussy_Shield.html"
   ],
   "Mailgirl": [
     "Mailgirl.html",
@@ -173,6 +172,15 @@
   "A_Friend_Who_Cares": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html", "AFWC_A_Friend_Who_Cares_19.html"],
   "Blanke_Schande": [
     "Hyacinth_Buddy.html",
+  ],
+  "Ponygirl": [
+    "Single_Stories.html",
+    "Ponygirl.html",
+    "A_beginning_of_A_Ponygirl.html",
+    "The_Goblin_Whisperer_and_her_Ponygirl.html",
+    "Yet_Another_Ponygirl_Story.html",
+    "Ponygirl_Minder.html",
+    "Life_on_A_Pony_Farm.html"
   ],
   "BDSMLibrary": [
     "Helen's_Ordeal.html",
