--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     "The_Party.html",
     "Katie,_the_President.html",
     "How_Kristen_Spent_Her_Summer_Vacation.html",
-    "Trials_of_Champions.html"
+    "Trials_of_Champions.html",
     "The_Pussy_Shield.html"
   ],
   "Mailgirl": [
