--- a/index.html
+++ b/index.html
@@ -129,14 +129,18 @@
     "Katie,_the_President.html",
     "How_Kristen_Spent_Her_Summer_Vacation.html",
     "Trials_of_Champions.html",
-    "The_Pussy_Shield.html"
+    "The_Pussy_Shield.html",
+    "The_Housekeeper.html"
   ],
   "Mailgirl": [
     "Mailgirl.html",
+    "The_Intern.html",
+    "A_Mailgirl's_Story.html",
     "A_Very_Merry_Mailgirls_XMas.html",
     "Life_Among_the_Mailgirls.html",
-    "Adventures_of_a_Mailgirl.html"
-
+    "Adventures_of_a_Mailgirl.html",
+    "MailGirls_at_IDG_and_Halloween.html",
+    "Mailgirls_at_Messidor.html"
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
@@ -180,7 +184,10 @@
     "The_Goblin_Whisperer_and_her_Ponygirl.html",
     "Yet_Another_Ponygirl_Story.html",
     "Ponygirl_Minder.html",
-    "Life_on_A_Pony_Farm.html"
+    "Life_on_A_Pony_Farm.html",
+    "Boots_and_her_Buddies.html",
+    "The_Summer_Job.html",
+    "The_Vanishing_Pony.html"
   ],
   "BDSMLibrary": [
     "Helen's_Ordeal.html",
