--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
     "How_Kristen_Spent_Her_Summer_Vacation.html",
     "Trials_of_Champions.html",
     "The_Pussy_Shield.html",
-    "The_Housekeeper.html"
+    "The_Housekeeper.html",
+    "Everybody_is_Sleeping.html",
+    "In_a_Room_Full_of_People.html"
   ],
   "Mailgirl": [
     "Mailgirl.html",
@@ -139,8 +141,15 @@
     "A_Very_Merry_Mailgirls_XMas.html",
     "Life_Among_the_Mailgirls.html",
     "Adventures_of_a_Mailgirl.html",
+    "Claire_at_IDG_Mailgirls_Story.html",
     "MailGirls_at_IDG_and_Halloween.html",
-    "Mailgirls_at_Messidor.html"
+    "Mailgirls_at_Messidor.html",
+    "Mailgirls_Down_Under.html"
+  ],
+  "Milking": [
+    "New_Girl_For_The_Milking_Barn.html",
+    "Life_In_A_Milking_Barn.html",
+    "Mandatory_Milking_Service.html",
   ],
   "Tami_Smithers": [
     "The_Unintentional_Nudist.html",
@@ -180,6 +189,7 @@
   "Ponygirl": [
     "Single_Stories.html",
     "Ponygirl.html",
+    "Nine_Days.html",
     "A_beginning_of_A_Ponygirl.html",
     "The_Goblin_Whisperer_and_her_Ponygirl.html",
     "Yet_Another_Ponygirl_Story.html",
@@ -187,7 +197,9 @@
     "Life_on_A_Pony_Farm.html",
     "Boots_and_her_Buddies.html",
     "The_Summer_Job.html",
-    "The_Vanishing_Pony.html"
+    "The_Vanishing_Pony.html",
+    "Reluctant_Ponygirl.html",
+    "Life_At_The_Ponygirl_Stables.html"
   ],
   "BDSMLibrary": [
     "Helen's_Ordeal.html",
