--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
     "Claire_at_IDG_Mailgirls_Story.html",
     "MailGirls_at_IDG_and_Halloween.html",
     "Mailgirls_at_Messidor.html",
-    "Mailgirls_Down_Under.html"
+    "Mailgirls_Down_Under.html",
+    "Naked Best Friend Exhibitionist CFNF Fun.pdf"
   ],
   "Milking": [
     "New_Girl_For_The_Milking_Barn.html",
@@ -206,7 +207,8 @@
     "Spanish_Donkey.html",
     "The_Law_of_private_ground.html",
     "Office_Screw_Up.html",
-    "Allie_and_Nicole.html"
+    "Allie_and_Nicole.html",
+    "A_Mother's_Submission.html"
   ],
   "Author_Harry": [
     "Caroline's_Inheritance.html",
