--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     "Rebekah_the_Helper's_Union_Member.html",
     "Naked_and_Unafraid.html",
     "The_Rent.html",
+    "Only_One_Naked_by_Cassie Caine.html",
     "Saving_a_Relic.html",
     "KAT's_Collection.html",
     "Soccer_Naked.html",
