--- a/Blanke_Schande/Hyacinth_Buddy.html
+++ b/Blanke_Schande/Hyacinth_Buddy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="book.png">
   <title>Hyacinth's Buddy</title>
   <style>
     /* Global Reset & Base Styles */
