--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     </header>
 
     <div class="search-box">
-      <input type="text" class="search-input" id="searchInput" placeholder="🔍 Search folders, files, or enter a number...">
+      <input type="number" class="search-input" id="searchInput" placeholder="🔍 Search folders, files, or enter a number...">
       <button class="surprise-btn" id="surpriseBtn">🎲 Surprise Me!</button>
     </div>
 
@@ -420,33 +420,33 @@
 
   <script>
     const repository = {
-      "From Outside": ["Mailgirl.html","Lady_Kathering_The_Christmas_Case.html","Uniform_Concerns.html","The_Theory_of_Nothing.html","The_Naked_Countess.html","The_Naked_Countess_II.html","Thief_Story.html","The_Lesson.html","A_Mistress_And_a_Little_Slave.html","Strange_Days.html","Dora's_Naked_Dare.html","Charmain_the_Naked_Maid.html","Monkey_And_The_Princess.html","Jack The Stripper And The Wedding.html","Kelly_the_Servant.html","Penny_-_Her_Bad_Dream_and_What_Followed.html","Zoe_Naked_In_School.html","Rebekah_the_Helper's_Union_Member.html","Naked_and_Unafraid.html","The_Rent.html","Only_One_Naked_by_Cassie Caine.html","Saving_a_Relic.html","KAT's_Collection.html","Soccer_Naked.html","Clementine_Dejesus_by_Linda_Bare.html","The_New_Regime.html","Sherlock_Holmes.html","Innocent_American_Wife_strip-searched_in_public_in_an_African_Airport.html","Power_Divest_Those_Who_Do_Not_Have_It.html","Casi_Secret_-_RSW.html","Diane_After_Work_-_RSW.html","Janet_Incentive_Program_-_RSW.html","Holi_Babysitting_Job_-_RSW.html","Tradition_-_RSW.html","The_Princess_Errant.html","Red_Fannie_Annie.html","A_Firebug_Gets_Punished.html","The_ENF_Catcher.html","Legends_Of_The_Fel.html","Leila's_Humiliation.html","Laundry_Day.html","Natural_Beauty.html","SOMA_Vestiphobia_Attorney.html","Amy_and_the_Doctor.html","The_Girl_with_no_Name.html","The_New_Girl.html","An_Innocent_Prank_Enf_story.html","A_Year_Of_Nudity.html","Naughty_Nice_and_Naked.html","Streak_of_Shame.html","Yukis_ENF_Office_Job.html","Word_of_Honor.html","Ninja_Training.html","Jenny_Baker_in_ADP.html","Living_in_a_Nudist_House.html","Chez_Louise.html","Lucina_Masked_Streaker.html","Unintentional.html","Naturally_Nora.html","Queenfall.html","Adventure_in_the_Willows.html","The_Bath_Towel.html","Trisha_the_Terrible.html","Legalised_Slavery.html","I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html","How_Sarah_Became_a_Nudist.html","Nude_World_Order.html","The_Party.html","Katie,_the_President.html","How_Kristen_Spent_Her_Summer_Vacation.html","Trials_of_Champions.html","The_Pussy_Shield.html","The_Housekeeper.html","Everybody_is_Sleeping.html","In_a_Room_Full_of_People.html"],
-      "Mailgirl": ["Mailgirl.html","The_Intern.html","A_Mailgirl's_Story.html","A_Very_Merry_Mailgirls_XMas.html","Life_Among_the_Mailgirls.html","Adventures_of_a_Mailgirl.html","Claire_at_IDG_Mailgirls_Story.html","MailGirls_at_IDG_and_Halloween.html","Mailgirls_at_Messidor.html","Mailgirls_Down_Under.html","Naked Best Friend Exhibitionist CFNF Fun.pdf"],
-      "Milking": ["New_Girl_For_The_Milking_Barn.html","Life_In_A_Milking_Barn.html","Mandatory_Milking_Service.html"],
-      "Tami_Smithers": ["The_Unintentional_Nudist.html","Home_for_Thanksgiving.html","The_Unintentional_Nudist_3.html","The_Unintentional_Nudist_4.html","The_Unintentional_Nudist_5.html","The_Unintentional_Nudist_6.html","The_Unintentional_Nudist_7.html","The_Unintentional_Nudist_8.html","The_Unintentional_Nudist_9.html","The_Unintentional_Nudist_10.html","The_Unintentional_Nudist_11.html","The_Unintentional_Nudist_12.html","The_Unintentional_Nudist_13.html","Tami_The_Naked_Freshman.html","Tami_Saves_Mei_Lin.html","Tami_Beethoven_1.html","Tami_Beethoven_2.html","Tami_Beethoven_3.html","Tami_Beethoven_4.html","Interview_With_The_Professor.html"],
-      "SliceReality_Mailgirl's_Stories": ["Mailgirls_-_Easter_'Mailbunny'.html","Mailgirls_-_Flight_Duty.html","Mailgirls_-_Program_Expansion.html","Mailgirls_-_Working_Late_for_Christmas.html","The_Mailgirl_Movie_-_Red_Carpet.html","Mailgirls_-_Basement_Dorm.html","Mailgirls_-_Trip.html"],
-      "A_Friend_Who_Cares": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html","AFWC_A_Friend_Who_Cares_19.html"],
-      "Blanke_Schande": ["Hyacinth_Buddy.html",
+      "From Outside 📥": ["Mailgirl.html","Lady_Kathering_The_Christmas_Case.html","Uniform_Concerns.html","The_Theory_of_Nothing.html","The_Naked_Countess.html","The_Naked_Countess_II.html","Thief_Story.html","The_Lesson.html","A_Mistress_And_a_Little_Slave.html","Strange_Days.html","Dora's_Naked_Dare.html","Charmain_the_Naked_Maid.html","Monkey_And_The_Princess.html","Jack The Stripper And The Wedding.html","Kelly_the_Servant.html","Penny_-_Her_Bad_Dream_and_What_Followed.html","Zoe_Naked_In_School.html","Rebekah_the_Helper's_Union_Member.html","Naked_and_Unafraid.html","The_Rent.html","Only_One_Naked_by_Cassie Caine.html","Saving_a_Relic.html","KAT's_Collection.html","Soccer_Naked.html","Clementine_Dejesus_by_Linda_Bare.html","The_New_Regime.html","Sherlock_Holmes.html","Innocent_American_Wife_strip-searched_in_public_in_an_African_Airport.html","Power_Divest_Those_Who_Do_Not_Have_It.html","Casi_Secret_-_RSW.html","Diane_After_Work_-_RSW.html","Janet_Incentive_Program_-_RSW.html","Holi_Babysitting_Job_-_RSW.html","Tradition_-_RSW.html","The_Princess_Errant.html","Red_Fannie_Annie.html","A_Firebug_Gets_Punished.html","The_ENF_Catcher.html","Legends_Of_The_Fel.html","Leila's_Humiliation.html","Laundry_Day.html","Natural_Beauty.html","SOMA_Vestiphobia_Attorney.html","Amy_and_the_Doctor.html","The_Girl_with_no_Name.html","The_New_Girl.html","An_Innocent_Prank_Enf_story.html","A_Year_Of_Nudity.html","Naughty_Nice_and_Naked.html","Streak_of_Shame.html","Yukis_ENF_Office_Job.html","Word_of_Honor.html","Ninja_Training.html","Jenny_Baker_in_ADP.html","Living_in_a_Nudist_House.html","Chez_Louise.html","Lucina_Masked_Streaker.html","Unintentional.html","Naturally_Nora.html","Queenfall.html","Adventure_in_the_Willows.html","The_Bath_Towel.html","Trisha_the_Terrible.html","Legalised_Slavery.html","I_got_reincarnated_naked_and_can’t_find_a_pair_of_pants.html","How_Sarah_Became_a_Nudist.html","Nude_World_Order.html","The_Party.html","Katie,_the_President.html","How_Kristen_Spent_Her_Summer_Vacation.html","Trials_of_Champions.html","The_Pussy_Shield.html","The_Housekeeper.html","Everybody_is_Sleeping.html","In_a_Room_Full_of_People.html"],
+      "Mailgirl 📨": ["Mailgirl.html","The_Intern.html","A_Mailgirl's_Story.html","A_Very_Merry_Mailgirls_XMas.html","Life_Among_the_Mailgirls.html","Adventures_of_a_Mailgirl.html","Claire_at_IDG_Mailgirls_Story.html","MailGirls_at_IDG_and_Halloween.html","Mailgirls_at_Messidor.html","Mailgirls_Down_Under.html","Naked Best Friend Exhibitionist CFNF Fun.pdf"],
+      "Milking 🐄": ["New_Girl_For_The_Milking_Barn.html","Life_In_A_Milking_Barn.html","Mandatory_Milking_Service.html"],
+      "Tami_Smithers 🤦‍♀️": ["The_Unintentional_Nudist.html","Home_for_Thanksgiving.html","The_Unintentional_Nudist_3.html","The_Unintentional_Nudist_4.html","The_Unintentional_Nudist_5.html","The_Unintentional_Nudist_6.html","The_Unintentional_Nudist_7.html","The_Unintentional_Nudist_8.html","The_Unintentional_Nudist_9.html","The_Unintentional_Nudist_10.html","The_Unintentional_Nudist_11.html","The_Unintentional_Nudist_12.html","The_Unintentional_Nudist_13.html","Tami_The_Naked_Freshman.html","Tami_Saves_Mei_Lin.html","Tami_Beethoven_1.html","Tami_Beethoven_2.html","Tami_Beethoven_3.html","Tami_Beethoven_4.html","Interview_With_The_Professor.html"],
+      "SliceReality_Mailgirl's_Stories 🏃‍♀️‍➡️": ["Mailgirls_-_Easter_'Mailbunny'.html","Mailgirls_-_Flight_Duty.html","Mailgirls_-_Program_Expansion.html","Mailgirls_-_Working_Late_for_Christmas.html","The_Mailgirl_Movie_-_Red_Carpet.html","Mailgirls_-_Basement_Dorm.html","Mailgirls_-_Trip.html"],
+      "A_Friend_Who_Cares 👨‍👩‍👧‍👦": ["AFWC_A_Friend_Who_Cares_01.html","AFWC_A_Friend_Who_Cares_02.html","AFWC_A_Friend_Who_Cares_03.html","AFWC_A_Friend_Who_Cares_04.html","AFWC_A_Friend_Who_Cares_05.html","AFWC_A_Friend_Who_Cares_09to10.html","AFWC_A_Friend_Who_Cares_11.html","AFWC_A_Friend_Who_Cares_12.html","AFWC_A_Friend_Who_Cares_13.html","AFWC_A_Friend_Who_Cares_14.html","AFWC_A_Friend_Who_Cares_15.html","AFWC_A_Friend_Who_Cares_16.html","AFWC_A_Friend_Who_Cares_17.html","AFWC_A_Friend_Who_Cares_18.html","AFWC_A_Friend_Who_Cares_19.html"],
+      "Blanke_Schande 🏫": ["Hyacinth_Buddy.html",
         "The_New_Professor.html"],
-      "Ponygirl": ["Single_Stories.html","Ponygirl.html","Nine_Days.html","A_beginning_of_A_Ponygirl.html","The_Goblin_Whisperer_and_her_Ponygirl.html","Yet_Another_Ponygirl_Story.html","Ponygirl_Minder.html","Life_on_A_Pony_Farm.html","Boots_and_her_Buddies.html","The_Summer_Job.html","The_Vanishing_Pony.html","Reluctant_Ponygirl.html","Life_At_The_Ponygirl_Stables.html"],
-      "BDSMLibrary": ["Helen's_Ordeal.html","Spanish_Donkey.html","The_Law_of_private_ground.html","Office_Screw_Up.html","Allie_and_Nicole.html","A_Mother's_Submission.html"],
-      "Author_Harry": ["Caroline's_Inheritance.html","Princess_Sara.html","Ladies'_Lodge.html","Doris,_Friends _and_Pirates.html","Golden_Guard.html"],
-      "Falcon_&_Seahawk": ["The_Reluctant_Exhibitionist.html","The_Reluctant_Exhibitionist_Returns.html","The_Reluctant_Exhibitionist_-_Family_Reunion.html","Allisonâ€™s_Inheritance.html"],
-      "Evacuees_Tale": ["Evacuees_Tale_01.html","Evacuees_Tale_02.html","Evacuees_Tale_03.html"],
-      "Family_Traditional_Picture_Day": ["Family_Tradition_Picture_Day_02kto02l.html","Family_Tradition_Picture_Day_02gto02j.html","Family_Tradition_Picture_Day_02d_to_2e.html","Family_Tradition_Picture_Day_01c_to_2c.html","Family_Tradition_Picture_Day_01.html"],
-      "Collaege_Girl_Kate": ["College_Girl_Kate_01.html","College_Girl_Kate_02.html","College_Girl_Kate_03.html","College_Girl_Kate_04.html","College_Girl_Kate_05.html","College_Girl_Kate_06.html","College_Girl_Kate_07.html"],
-      "Girls Don't Need Modesty": ["Girls_Dont_Need_Modesty_01.html","Girls_Dont_Need_Modesty_02A.html","Girls_Dont_Need_Modesty_02to03.html","Girls_Dont_Need_Modesty_04.html","Girls_Dont_Need_Modesty_05.html","Lauren_Prentiss_Medical_Examination_01.html"],
-      "Hannas_Embarrassing_Accident": ["Hannas_Embarrassing_Accident_01to03.html","Hannas_Embarrassing_Accident_04to07.html","Hannas_Embarrassing_Accident_08to12.html","Hannas_Embarrassing_Accident_13to17.html"],
-      "Laundry_Machine_Mishap": ["Laundry_Machine_Mishap_01.html","Laundry_Machine_Mishap_02.html","Laundry_Machine_Mishap_03.html","Laundry_Machine_Mishap_04.html","Laundry_Machine_Mishap_05.html","Laundry_Machine_Mishap_06.html","Laundry_Machine_Mishap_07.html","Laundry_Machine_Mishap_08.html","Laundry_Machine_Mishap_09.html","Laundry_Machine_Mishap_10.html"],
+      "Ponygirl 🐎": ["Single_Stories.html","Ponygirl.html","Nine_Days.html","A_beginning_of_A_Ponygirl.html","The_Goblin_Whisperer_and_her_Ponygirl.html","Yet_Another_Ponygirl_Story.html","Ponygirl_Minder.html","Life_on_A_Pony_Farm.html","Boots_and_her_Buddies.html","The_Summer_Job.html","The_Vanishing_Pony.html","Reluctant_Ponygirl.html","Life_At_The_Ponygirl_Stables.html"],
+      "BDSMLibrary 📚": ["Helen's_Ordeal.html","Spanish_Donkey.html","The_Law_of_private_ground.html","Office_Screw_Up.html","Allie_and_Nicole.html","A_Mother's_Submission.html"],
+      "Author_Harry ✍️": ["Caroline's_Inheritance.html","Princess_Sara.html","Ladies'_Lodge.html","Doris,_Friends _and_Pirates.html","Golden_Guard.html"],
+      "Falcon_&_Seahawk 🦅": ["The_Reluctant_Exhibitionist.html","The_Reluctant_Exhibitionist_Returns.html","The_Reluctant_Exhibitionist_-_Family_Reunion.html","Allisonâ€™s_Inheritance.html"],
+      "Evacuees_Tale ⚔️": ["Evacuees_Tale_01.html","Evacuees_Tale_02.html","Evacuees_Tale_03.html"],
+      "Family_Traditional_Picture_Day 👨‍👩‍👧‍👦": ["Family_Tradition_Picture_Day_02kto02l.html","Family_Tradition_Picture_Day_02gto02j.html","Family_Tradition_Picture_Day_02d_to_2e.html","Family_Tradition_Picture_Day_01c_to_2c.html","Family_Tradition_Picture_Day_01.html"],
+      "Collaege_Girl_Kate 👧": ["College_Girl_Kate_01.html","College_Girl_Kate_02.html","College_Girl_Kate_03.html","College_Girl_Kate_04.html","College_Girl_Kate_05.html","College_Girl_Kate_06.html","College_Girl_Kate_07.html"],
+      "Girls Don't Need Modesty 🩲": ["Girls_Dont_Need_Modesty_01.html","Girls_Dont_Need_Modesty_02A.html","Girls_Dont_Need_Modesty_02to03.html","Girls_Dont_Need_Modesty_04.html","Girls_Dont_Need_Modesty_05.html","Lauren_Prentiss_Medical_Examination_01.html"],
+      "Hannas_Embarrassing_Accident 😳": ["Hannas_Embarrassing_Accident_01to03.html","Hannas_Embarrassing_Accident_04to07.html","Hannas_Embarrassing_Accident_08to12.html","Hannas_Embarrassing_Accident_13to17.html"],
+      "Laundry_Machine_Mishap 🗑️": ["Laundry_Machine_Mishap_01.html","Laundry_Machine_Mishap_02.html","Laundry_Machine_Mishap_03.html","Laundry_Machine_Mishap_04.html","Laundry_Machine_Mishap_05.html","Laundry_Machine_Mishap_06.html","Laundry_Machine_Mishap_07.html","Laundry_Machine_Mishap_08.html","Laundry_Machine_Mishap_09.html","Laundry_Machine_Mishap_10.html"],
       "Lias_New_Reality": ["Lias_New_Reality_01to04.html","Lias_New_Reality_05to07.html","Lias_New_Reality_08.html","Lias_New_Reality_09to10.html","Lias_New_Reality_11.html","Lias_New_Reality_12.html","Lias_New_Reality_13.html","Lias_New_Reality_14to15.html","Lias_New_Reality_16.html"],
-      "NAKED_Naked_and_Abashed_Kids": ["NAKED_Naked_and_Abashed_Kids_01.html","NAKED_Naked_and_Abashed_Kids_02.html","NAKED_Naked_and_Abashed_Kids_03.html","NAKED_Naked_and_Abashed_Kids_04.html","NAKED_Naked_and_Abashed_Kids_05.html","NAKED_Naked_and_Abashed_Kids_06.html","NAKED_Naked_and_Abashed_Kids_07.html","NAKED_Naked_and_Abashed_Kids_08.html","NAKED_Naked_and_Abashed_Kids_09.html","NAKED_Naked_and_Abashed_Kids_10.html","NAKED_Naked_and_Abashed_Kids_11.html"],
-      "Old_Fashioned_Family": ["Old_Fashioned_Family_01to02.html","Old_Fashioned_Family_03to04.html","Old_Fashioned_Family_05to07.html"],
-      "The_New_Rules": ["Fort_of_Fantasy.html","The_New_Rules.html"],
-      "Oneshot": ["Enjoying_View_01to02.html","Little_Susies_Suppository_Ordeal.html","Lilys_Embarrassing_Punishment.html","Lisa_On_the_Beach.html","Jackson_Three_Bares.html","Babysitting_Em_01.html","Child_Protective_Court.html","Failure_To_Communicate.html","Summer_That_Changed_Everything_01to07.html","TAE_Tiffany_Anson_Exposed.html"],
-      "Playing_Doctor": ["Playing_Doctor_01to02.html","Playing_Doctor_03to04.html","Playing_Doctor_05.html"],
-      "Red_Fannie_Annie": ["Red_Fannie_Annie_1.html","Red_Fannie_Annie_2.html"],
+      "NAKED_Naked_and_Abashed_Kids 👧🏻👦🏻👧🏻": ["NAKED_Naked_and_Abashed_Kids_01.html","NAKED_Naked_and_Abashed_Kids_02.html","NAKED_Naked_and_Abashed_Kids_03.html","NAKED_Naked_and_Abashed_Kids_04.html","NAKED_Naked_and_Abashed_Kids_05.html","NAKED_Naked_and_Abashed_Kids_06.html","NAKED_Naked_and_Abashed_Kids_07.html","NAKED_Naked_and_Abashed_Kids_08.html","NAKED_Naked_and_Abashed_Kids_09.html","NAKED_Naked_and_Abashed_Kids_10.html","NAKED_Naked_and_Abashed_Kids_11.html"],
+      "Old_Fashioned_Family 🦯": ["Old_Fashioned_Family_01to02.html","Old_Fashioned_Family_03to04.html","Old_Fashioned_Family_05to07.html"],
+      "The_New_Rules 📝": ["Fort_of_Fantasy.html","The_New_Rules.html"],
+      "Oneshot 🔖": ["Enjoying_View_01to02.html","Little_Susies_Suppository_Ordeal.html","Lilys_Embarrassing_Punishment.html","Lisa_On_the_Beach.html","Jackson_Three_Bares.html","Babysitting_Em_01.html","Child_Protective_Court.html","Failure_To_Communicate.html","Summer_That_Changed_Everything_01to07.html","TAE_Tiffany_Anson_Exposed.html"],
+      "Playing_Doctor 🩺": ["Playing_Doctor_01to02.html","Playing_Doctor_03to04.html","Playing_Doctor_05.html"],
+      "Red_Fannie_Annie 🍑": ["Red_Fannie_Annie_1.html","Red_Fannie_Annie_2.html"],
       "The_Wrong_Slipper": ["The_Wrong_Slipper_01.html","The_Wrong_Slipper_02.html","The_Wrong_Slipper_03.html"],
-      "Temple_of_Venus": ["Temple_of_Venus_01.html","Temple_of_Venus_02to03.html"],
+      "Temple_of_Venus 🛕": ["Temple_of_Venus_01.html","Temple_of_Venus_02to03.html"],
       "Misty_Jones": ["Girlfriend's_Arrest.html","Girlfriend's_Arrest_2.html","The_Halloween_Costume.html","Caught_and_Punished.html"]
     };
 
@@ -464,6 +464,11 @@
 
     let allFilesWithNumbers = [];
     let currentSurpriseUrl = '';
+
+    function getActualFolderName(folderName) {
+      // Extract folder name up to first space (before emojis/descriptions)
+      return folderName.split(' ')[0];
+    }
 
     function formatName(name) {
       return name.replaceAll('_', ' ').replace('.html', '').replace('.pdf', '');
@@ -519,8 +524,8 @@
         if (foundFile) {
           surpriseNumber.textContent = `#${String(foundFile.number).padStart(3, '0')}`;
           surpriseFileName.textContent = formatName(foundFile.file);
-          surpriseFolderName.textContent = `📁 ${formatName(foundFile.folder)}`;
-          currentSurpriseUrl = `${baseFolder}/${foundFile.folder}/${foundFile.file}`;
+          surpriseFolderName.textContent = `📁 ${formatName(foundFile.displayName)}`;
+          currentSurpriseUrl = `${baseFolder}/${getActualFolderName(foundFile.folder)}/${foundFile.file}`;
           surpriseResult.classList.add('active');
           
           // Hide the grid when showing number result
@@ -585,7 +590,7 @@
         filteredFilesData.forEach(({ file, fileData }) => {
           const fileItem = document.createElement("a");
           fileItem.className = "file-item";
-          fileItem.href = `${baseFolder}/${folderName}/${file}`;
+          fileItem.href = `${baseFolder}/${getActualFolderName(folderName)}/${file}`;
           fileItem.target = "_blank";
           fileItem.innerHTML = `
             <span class="file-icon">📄</span>
@@ -610,7 +615,10 @@
     }
 
     searchInput.addEventListener("input", (e) => {
-      const value = e.target.value.trim();
+      let value = e.target.value.trim();
+      // Remove any non-numeric characters
+      value = value.replace(/\D/g, '');
+      e.target.value = value;
       renderFolders(value);
     });
 
