--- a/From Outside/Sherlock_Holmes.html
+++ b/From Outside/Sherlock_Holmes.html
@@ -24,7 +24,7 @@
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-            text-align: justify;
+            /*text-align: justify;*/
             margin: 40px auto;
             overflow-y: auto;
         }
