--- a/From_Outside/Legends_Of_The_Fel.html
+++ b/From_Outside/Legends_Of_The_Fel.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="book.png">
   <title>Legends of the Fel</title>
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Crimson+Text&display=swap" rel="stylesheet">
   <style>
